--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ animation-delay: .8s;
   left:0;
   right: 0;
   bottom: 0;
-  background: rgba(215,67,77,0.9);
+  background: rgba(47, 43, 43, 0.9);
   opacity: 0;
   -webkit-transform: scale(0.2);
      -moz-transform: scale(0.2);
