--- a/css/style.css
+++ b/css/style.css
@@ -86,7 +86,7 @@
   bottom:0px;
   width: 6px;
   height: 5px;
-  background:#e04f5d;
+  background:#545353;
   position:absolute;
   animation: preloader_1 1.5s  infinite ease-in-out;
 }
