--- a/css/style.css
+++ b/css/style.css
@@ -109,10 +109,10 @@ left:44px;
 animation-delay: .8s;
 }
 @keyframes preloader_1 {
-    0% {height:5px;transform:translateY(0px);background:#e62d3f;}
-    25% {height:30px;transform:translateY(15px);background:#e62d3f;}
-    50% {height:5px;transform:translateY(0px);background:#ee2438;}
-    100% {height:5px;transform:translateY(0px);background:#ee2438;}
+    0% {height:5px;transform:translateY(0px);background:#545353;}
+    25% {height:30px;transform:translateY(15px);background:#545353;}
+    50% {height:5px;transform:translateY(0px);background:#545353;}
+    100% {height:5px;transform:translateY(0px);background:#545353;}
 }
 
 
