--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ animation-delay: .8s;
  body {
   font-family: 'Raleway', sans-serif;
   font-weight: normal;
-  color:#ffffff;
+  color:#787a7b;
   font-size: 18px;
   position: relative;
  }
