--- a/css/style.css
+++ b/css/style.css
@@ -278,7 +278,7 @@ animation-delay: .8s;
 #contact-section .contact-address-content .left-side ul li .icon,#contact-section .send-message form button,
 .sidebar-tags ul li a:hover,.blog-details-post-wrapper .post-comment form button,
 .blog-details-post-wrapper .post-comment textarea:focus,.blog-details-post-wrapper .post-comment input:focus {
-  border-color:#000000;
+  border-color:#da4545;
   border-style: solid;
 }
 /***
